Fix tree panel resizing on mobile resolution

--- a/www/drive/app-drive.less
+++ b/www/drive/app-drive.less
@@ -118,7 +118,7 @@
             }
             #cp-app-drive-tree {
                 resize: none;
-                width: 100%;
+                width: 100% !important;
                 max-width: unset;
                 max-height: unset;
                 border-bottom: 1px solid @drive_mobile-tree-border-col;
